--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,2 +1,7 @@
 image:
   file: .gitpod.dockerfile
+
+tasks:
+  command: pip3 install simpleaudio
+  command: pip3 install pyopengl
+  cpmmand: cd && git clone https://github.com/retrio/gb-test-roms
