--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,6 +2,6 @@ image:
   file: .gitpod.dockerfile
 
 tasks:
-  command: pip3 install simpleaudio
-  command: pip3 install pyopengl
-  cpmmand: cd && git clone https://github.com/retrio/gb-test-roms
+  - command: pip3 install simpleaudio
+  - command: pip3 install pyopengl
+  - command: cd && git clone https://github.com/retrio/gb-test-roms
