--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,8 +2,15 @@ image:
   file: .gitpod.dockerfile
 
 tasks:
-  - command: pip3 install simpleaudio && pip3 install pyopengl && cd && git clone https://github.com/retrio/gb-test-roms && cd /workspace/vsgb && python3 main.py -sr ~/gb-test-roms/cpu_instrs/cpu_instrs.gb
-
+  - command: cd && wget https://github.com/squeaky-pl/portable-pypy/releases/download/pypy3.6-7.2.0/pypy3.6-7.2.0-linux_x86_64-portable.tar.bz2
+  command: tar -xjf pypy3.6-7.2.0-linux_x86_64-portable.tar.bz2
+  command: export PATH=$PATH:/home/gitpod/pypy3.6-7.2.0-linux_x86_64-portable/bin
+  command: pypy3 -m ensurepip
+  command: pypy3 -m pip install simpleaudio
+  command: pypy3 -m pip install pyopengl
+  command: git clone https://github.com/retrio/gb-test-roms
+  command: cd /workspace/vsgb
+  command: pypy3 main.py -sr ~/gb-test-roms/cpu_instrs/cpu_instrs.gb
 ports:
   - port: 6080
     onOpen: open-preview
